# roboy_audio

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conf.py  how-to.txt  package.xml
awesome_svcs/: CMakeLists.txt  package.xml
awesome_svcs/srv/: cameraFrame.srv  cameraFrames.srv  disableStiffness.srv  goToPosture.srv  keyboardKeys.srv  locateStuff.srv  moveEndeffector.srv  moveJoint.srv  moveJointSequence.srv  moveJoints.srv  moveJointsSequence.srv  qualityOfTone.srv  qualityOfTones.srv  queryJoints.srv  reachabilityMap.srv  sayAloud.srv  selfCalibration.srv  setHandOpen.srv  setLeds.srv  walkTo.srv  whichTones.srv
doa_estimation/: CMakeLists.txt  package.xml
doa_estimation/data/: mic_7.csv
doa_estimation/include/: cross_correlation.h  direction_of_arrival.h  microphone_array.h  music_spectrum.h
doa_estimation/launch/: debug_matrix_doa.launch  matrix_doa.launch
doa_estimation/msg/: DirVec.msg
doa_estimation/src/: collect_data.cpp  cross_correlation.cpp  direction_of_arrival.cpp  direction_of_arrival_demo.cpp  everloop.cpp  matrix_driver.cpp  microphone_array.cpp  music_spectrum.cpp  wishbone_bus.cpp
doa_estimation_msgs/: CMakeLists.txt  CmakeLists.txt  package.xml
docs/: Doxyfile  conf.py  index.rst
docs/ScopeContext/: 6_API.rst
docs/Usage/: 0_installation.rst
docs/doxyxml/: ____init_____8py.xml  _r_e_a_d_m_e_8md.xml  audio__capture_8cpp.xml  circular__queue_8h.xml  classaudio__transport_1_1_ros_gst_capture.xml  classmatrix__hal_1_1_circular_queue.xml  classmatrix__hal_1_1_cross_correlation.xml  classmatrix__hal_1_1_direction_of_arrival.xml  classmatrix__hal_1_1_everloop.xml  classmatrix__hal_1_1_everloop_image.xml  classmatrix__hal_1_1_i_m_u_data.xml  classmatrix__hal_1_1_led_value.xml  classmatrix__hal_1_1_matrix_driver.xml  classmatrix__hal_1_1_microphone_array.xml  classmatrix__hal_1_1_pressure_data.xml  classmatrix__hal_1_1_wishbone_bus.xml  conf_8py.xml  creator__memory__map_8h.xml  cross__correlation_8cpp.xml  cross__correlation_8h.xml  dir_87bd9fe9dcd9db5c1963e08f8b923906.xml  dir_94042d2a4cc2200a042f0dbbab010fb2.xml  dir_99bb8d3e72753c9dd17f053be67fa1a4.xml  dir_b4be485efbc1ea62cf4f8fcc9b814763.xml  dir_e61185094ee38072c47abc92f8244005.xml  dir_f2deacb5f7a1a2eaba36d752699f50e6.xml  direction__of__arrival_8cpp.xml  direction__of__arrival_8h.xml  direction__of__arrival__demo_8cpp.xml  everloop_8cpp.xml  everloop_8h.xml  everloop__image_8h.xml  imu__data_8h.xml  index.xml  matrix__driver_8cpp.xml  matrix__driver_8h.xml  md___users__kevin__documents__uni__r_c_i__roboy_git_repos_roboy_audio__r_e_a_d_m_e.xml  microphone__array_8cpp.xml  microphone__array_8h.xml  microphone__array__location_8h.xml  (+10 more)
documentation/: Doxyfile  conf.py  index.rst
documentation/Usage/: 0_installation.rst  1_getting_started.rst
documentation/doxyml/: class_nutshell.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  nutshell_8h.xml
documentation/doxyxml/: class_nutshell.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  group__nuttygroup.xml  group__nuttygroup2.xml  index.xml  nutshell_8h.xml
doxyxml/: index.xml
keytone_recognition/: CMakeLists.txt  package.xml
keytone_recognition/include/: WAVPlayer.hpp  freqOmeter.hpp  gnuplot_i.hpp
keytone_recognition/src/: freqOmeter.cpp  main.cpp  main_microphone.cpp
nao_audio/: CMakeLists.txt  package.xml
nao_audio/include/: freqOmeter.hpp  plot.hpp
nao_audio/src/: freqOmeter.cpp  main.cpp  main_microphone.cpp
roboy_audio_capture/: CMakeLists.txt  package.xml
roboy_audio_capture/launch/: capture_matrix_mics.launch
roboy_audio_capture/src/: audio_capture.cpp
roboy_audio_stream/: CMakeLists.txt  package.xml
roboy_audio_stream/launch/: capture.launch  capture_matrix_mics.launch  receive_py.launch
roboy_audio_stream/scripts/: recv_stream.py
roboy_audio_stream/src/: miccapture.cpp
src/: Main.java  Samples.java  readme.md
