<?xml version="1.0"?>
<package format="2">
  <name>doa_estimation</name>
  <version>0.0.1</version>
  <description>The doa_estimation package</description>

  <maintainer email="kevinjust87@gmail.com">Kevin Just</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roboy_communication_cognition</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roboy_communication_cognition</exec_depend>

</package>
