<?xml version="1.0"?>
<package format="2">
    <name>doa_estimation_msgs</name>
    <version>0.0.1</version>
    <description>Messages for transmitting the DOA-vector</description>
    <maintainer email="kevinjust87@gmail.com">Kevin Just</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
