<?xml version="1.0"?>
<package>
    <name>keytone_recognition</name>
    <version>0.0.0</version>
    <description>The keytone recognition package</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <maintainer email="kevin.just@tum.de">Kevin Just</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>roboy_communication_cognition</build_depend>
    <build_depend>cmake_modules</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roboy_communication_cognition</run_depend>
</package>
