<?xml version="1.0"?>
<package format="2">
  <name>roboy_audio_stream</name>
  <version>0.0.0</version>
  <description>The roboy_audio_stream package</description>

  <maintainer email="kevinjust87@gmail.com">Kevin Just</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/Roboy/Audio</url>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
